# hf-data-check

./: .gitignore  README.md  config.py.example  dataset_check.py  pyproject.toml  requirements.txt
samples_cc12m/: caption_1.txt  caption_10.txt  caption_2.txt  caption_3.txt  caption_4.txt  caption_5.txt  caption_6.txt  caption_7.txt  caption_8.txt  caption_9.txt
samples_cc3m/: caption_1.txt  caption_10.txt  caption_2.txt  caption_3.txt  caption_4.txt  caption_5.txt  caption_6.txt  caption_7.txt  caption_8.txt  caption_9.txt
samples_cocokt/: caption_1.txt  caption_10.txt  caption_2.txt  caption_3.txt  caption_4.txt  caption_5.txt  caption_6.txt  caption_7.txt  caption_8.txt  caption_9.txt
samples_redcaps/: caption_1.txt  caption_10.txt  caption_2.txt  caption_3.txt  caption_4.txt  caption_5.txt  caption_6.txt  caption_7.txt  caption_8.txt  caption_9.txt
samples_sbu/: caption_1.txt  caption_10.txt  caption_2.txt  caption_3.txt  caption_4.txt  caption_5.txt  caption_6.txt  caption_7.txt  caption_8.txt  caption_9.txt
samples_vg/: caption_1.txt  caption_10.txt  caption_2.txt  caption_3.txt  caption_4.txt  caption_5.txt  caption_6.txt  caption_7.txt  caption_8.txt  caption_9.txt
samples_wit/: caption_1.txt  caption_10.txt  caption_2.txt  caption_3.txt  caption_4.txt  caption_5.txt  caption_6.txt  caption_7.txt  caption_8.txt  caption_9.txt
